# docai

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docai/: config.py  inference.py  loader.py  main.py  utils.py
docai/data_gen/: layoutlmv3_datagen.py
docai/inference/: inference.py
docai/models/: lmv3model.py
docai/training/: engine.py  main.py
docai/utils/: gcs_acquisition.py
