[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docai"
version = "0.0.1"
description = "This project focuses on document processing and information extraction using LayoutLMv3, a transformer-based model designed for structured document understanding. The system processes images or PDFs containing structured text (such as invoices, claims, or forms), extracts relevant textual and spatial information, and classifies key elements."
authors = [
  { name = "Daksh Maheshwari" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
# Add any other Ruff configuration here.

[tool.ruff.isort]
known_first_party = ["docai"]
force_sort_within_sections = true

